--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -362,7 +363,8 @@
         <div id="successMessage" class="success-message" style="display: none;"></div>
         <div id="attemptsWarning" class="login-attempts" style="display: none;"></div>
 
-        <form id="loginForm" novalidate>
+        <form id="loginForm" method="post" action="{% url 'accounts:login ' %}" novalidate>
+            {% csrf_token %}
             <div class="form-group">
                 <label for="email" class="form-label">Email Address</label>
                 <input type="email" id="email" name="email" class="form-input" required value="demo@shopbay.com">
