--- a/templates/cart.html
+++ b/templates/cart.html
@@ -66,7 +66,7 @@
     <p style="font-weight: 500; font-size: 1rem; margin: 1rem 0 0.25rem;">ИТОГО</p>
     <p style="font-size: 1.4rem; font-weight: 600; margin: 0 0 0.5rem;">₸ {{ cart.total_price|floatformat:0 }}</p>
     <p style="font-size: 0.75rem; color: #888;">* Включая НДС</p>
-    <a href="#" style="
+    <a href="{% url 'checkout_view' %}" style="
         display: block;
         margin-top: 1rem;
         background-color: #000;
